# email2csv

./: IQX_Talent_Intake_Manager_PRD.md  README.md
h2h_iqx_pipeline/: .gitignore  README.md  pyproject.toml  requirements.txt
h2h_iqx_pipeline/config/: README.md  example_config.yml
h2h_iqx_pipeline/docs/: README.md  architecture.md  pipeline_spec.md  process_overview.md
h2h_iqx_pipeline/excel_example_run_0208q7yb/: Bulk Import H2H Combo IBEW 4 8 9 Iron 2025-12-04.csv  Combo Dups Removed 2025-12-04.xlsx  Combo H2H IBEW 4 8 9 Iron 2025-12-04.xlsx  QA Report 2025-12-04.txt
h2h_iqx_pipeline/excel_example_run_2tmr4z0a/: Combo Dups Removed 2025-12-04.xlsx  Combo H2H IBEW 4 8 9 Iron 2025-12-04.xlsx  QA Report 2025-12-04.txt
h2h_iqx_pipeline/excel_example_run_8svlvuqe/: Combo Dups Removed 2025-12-04.xlsx  Combo H2H IBEW 4 8 9 Iron 2025-12-04.xlsx  QA Report 2025-12-04.txt
h2h_iqx_pipeline/excel_example_run_lgqqct_b/: Combo Dups Removed 2025-12-04.xlsx  Combo H2H IBEW 4 8 9 Iron 2025-12-04.xlsx  QA Report 2025-12-04.txt
h2h_iqx_pipeline/excel_example_run_mmufn627/: Bulk Import H2H Combo IBEW 4 8 9 Iron 2025-12-04.csv  Combo Dups Removed 2025-12-04.xlsx  Combo H2H IBEW 4 8 9 Iron 2025-12-04.xlsx  QA Report 2025-12-04.txt
h2h_iqx_pipeline/excel_example_run_rm_qx9k5/: Bulk Import H2H Combo IBEW 4 8 9 Iron 2025-12-04.csv  Combo Dups Removed 2025-12-04.xlsx  Combo H2H IBEW 4 8 9 Iron 2025-12-04.xlsx  QA Report 2025-12-04.txt
h2h_iqx_pipeline/excel_examples/: Bulk Import H2H Combo IBEW 4 8 9 Iron 2025-12-04.csv  Career Seekers Interested in IBEW D4 11052025-12042025.xlsx  (+3 more)
(+47 files in other folders)
