[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h2h-iqx-pipeline"
version = "0.0.1"
description = "File-based prototype for H2H to IQX bulk import processing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "pyyaml>=6.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
